--- a/css/style.css
+++ b/css/style.css
@@ -41,23 +41,38 @@ a{
 	margin-top:10px;
 }
 .game-container{
-	width:490px;
-	height:490px;
+	width:460px;
+	height:460px;
+	padding:20px;
+
+	marign:50px auto;
+	position:relative;
+
 	background-color:#BBADA0;
-	margin-left:40px;
-	margin-top:20px;
-	padding-left:10px;
-	padding-top:10px;
-	border-radius:10px;
+	/* border-radius:10px; */
 }
+
 .game-container .game-col{
-	width:104px;
-	height:104px;
+	width:100px;
+	height:100px;
+	
+	position:absolute;
 	background-color:#CDC1B4;
-	float:left;
-	margin:8px;
-	border-radius:8px;
+
+/*	border-radius:8px;	*/
 }
+
+.number-cell {
+	width:100px;
+	height:100px;
+	font-size:60px;
+	line-height:100px;
+	text-align:center;
+
+	position:absolute;
+}
+
+
 .end{
 	margin-top:40px;
 	text-align:center;
